# mizu

blueprints/bi/: go.mod  go.sum
blueprints/book/: go.mod  go.sum
blueprints/book/cli/: challenge.go  fetch.go  goodreads.go  import_export.go  init.go  review.go  root.go  seed.go  serve.go  shelf.go  stats.go  ui.go
blueprints/book/store/: store.go
blueprints/book/types/: types.go
blueprints/bot/: go.mod  go.sum
blueprints/chat/: go.mod
blueprints/cms/: go.mod  go.sum
blueprints/drive/: go.mod  go.sum
blueprints/email/: go.mod
blueprints/finewiki/: go.mod  go.sum
blueprints/forum/: go.mod  go.sum
blueprints/githome/: go.mod  go.sum
blueprints/kanban/: go.mod
blueprints/lingo/: go.mod  go.sum
blueprints/liteio/: Dockerfile  Makefile  README.md  go.mod  go.sum
blueprints/liteio/bench/: bench_test.go  config.go  docker.go  driver_import_ant.go  metrics.go  profiler.go  progress.go  raw_results.json  report.go  report.md  resource.go  runner.go  summary.md
blueprints/liteio/bench_s3/: client.go  config.go  report.go  runner.go
blueprints/liteio/docker/: README.md
blueprints/liteio/report/: benchmark_results.csv  profile_report.md  raw_results.json  report.md  summary.md
blueprints/liteio/report-bear/: raw_results.json  report.md  summary.md
blueprints/liteio/report-zoo/: raw_results.json  report.md  summary.md
blueprints/liteio/scripts/: bench-compare.sh  install-minio.sh  install-rustfs.sh
blueprints/localbase/: go.mod  go.sum
blueprints/localflare/: go.mod  go.sum
blueprints/messaging/: go.mod  go.sum
blueprints/microblog/: go.mod  go.sum
blueprints/news/: go.mod  go.sum
blueprints/qa/: go.mod
blueprints/search/: Dockerfile.linux-focal  Dockerfile.linux-focal.dockerignore  Dockerfile.linux-noble  Makefile  go.mod  go.sum
blueprints/search/cli/: cc.go  cc_defaults.go  cc_parquet.go  cc_recrawl_domain_export.go  cc_warc.go  dcrawl.go  hn.go  hn_test.go  perplexity.go  recrawl.go  root.go  rss.go
blueprints/search/spec/: 0613_recrawl_v3.md  0616_warc.md  0617_adaptive_hardware.md  0619_resource_usage.md  0620_new_kernel.md  0621_chunk.md  0622_zero_false_negative.md  0627_cc_recrawl_optimize.md  0627_markdown.md  0629_domain_crawl_browser.md  0630_modern_crawler_rust.md  0631_modern_crawler_rust.md  0634_errors.md  0635_better_ua.md
blueprints/search/store/: store.go
blueprints/search/tools/crawler/crawler-cli/: Cargo.toml
blueprints/search/tools/crawler/crawler-cli/src/: display.rs  tui.rs
blueprints/search/tools/crawler/crawler-lib/: Cargo.toml
blueprints/search/tools/crawler/crawler-lib/src/: config.rs  job.rs  stats.rs  types.rs  ua.rs
blueprints/search/tools/crawler/crawler-lib/src/engine/: hyper_engine.rs  mod.rs  reqwest_engine.rs  wreq_engine.rs
blueprints/search/tools/crawler/crawler-lib/src/writer/: duckdb_writer.rs  mod.rs  parquet_writer.rs
blueprints/social/: go.mod  go.sum
blueprints/spreadsheet/: go.mod  go.sum
blueprints/table/: go.mod  go.sum
blueprints/workspace/: go.mod  go.sum
cmd/: go.mod  go.sum
docs/plans/: 2026-02-14-translate-app.md  2026-02-15-translate-enhance-analytics.md  2026-02-19-herd-cluster-design.md
spec/: 0533_translate.md  0534_translate_pages.md  0547_ai_account.md  0548_account_d1.md  0560_cluster_bee_driver.md  0561_cluster_zebra_driver.md  0562_pony_driver.md  0563_herd_driver.md  0564_cluster_bench.md
(+813 files in other folders)
